2011-01-11  Alexander Kurtakov  <akurtako@redhat.com>
	* src/org/eclipse/linuxtools/rpm/ui/editor/markers/SpecfileErrorHandler.java (removeExistingMarkers): Fix NPE.
	(handleError): Use more effective Integer parser.